Hide Some Section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Zapper</title>
-
+  <title>FeetWings</title>
+<!--
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="assets/favicon/site.webmanifest">
+  <link rel="manifest" href="assets/favicon/site.webmanifest"> -->
 
   <!--stylesheet-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -22,9 +22,9 @@
 <body>
 
   <!-- preloader start-->
-  <div class="preloader">
+  <!-- <div class="preloader">
     <img src="assets/images/loading-logo.png" alt="image">
-  </div>
+  </div> -->
   <!--preloader end -->
 
   <!--header section start-->
@@ -43,17 +43,8 @@
             <li><a href="#feature">Features</a></li>
             <li><a href="#feedback">Feedbacks</a></li>
             <li><a href="#faq">FAQs</a></li>
-            <li><a href="#pricing">Pricing</a></li>
+            <!-- <li><a href="#pricing">Pricing</a></li> -->
             <li><a href="#preview">Preview</a></li>
-            <li class="nav__dropdown dropdown-wrapper" id="menu-2">
-              <a href="#" class="nav__dropdown-info dropdown-info">
-                Pages
-              </a>
-              <ul class="nav__dropdown-box dropdown-box">
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="blog-single.html">Blog single</a></li>
-              </ul>
-            </li>
           </ul>
           <span><i class="fas fa-times"></i></span>
         </div>
@@ -408,7 +399,7 @@
           </div>
         </div>
       </div>
-      <div class="clients">
+      <!-- <div class="clients">
         <div class="clients__info">
           <h3>47,000+</h3>
           <p class="paragraph dark">Customers in over 90 countries are growing their businesses with us.</p>
@@ -426,7 +417,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
   <!--client section end-->
@@ -580,7 +571,7 @@
   <!--questions section end-->
 
   <!--pricing section start-->
-  <section class="pricing" id="pricing">
+  <!-- <section class="pricing" id="pricing">
     <div class="pricing__wrapper">
       <h2 class="section-heading color-black">Easy pricing plans for your needs.</h2>
       <div class="container">
@@ -657,7 +648,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--pricing section end-->
 
   <!--screenshot section start-->
@@ -696,7 +687,7 @@
   <!--screenshot section end-->
 
   <!--related blog section start-->
-  <section class="related-blog blog">
+  <!-- <section class="related-blog blog">
     <div class="related-blog__wrapper">
       <h2 class="section-heading color-black">Read latest news from our blog.</h2>
       <div class="blog__content">
@@ -739,7 +730,7 @@
         <span>GO TO BLOG <i class="fad fa-long-arrow-right"></i></span>
       </a>
     </div>
-  </section>
+  </section> -->
   <!--related blog section end-->
 
   <!--newsletter section start-->
@@ -775,7 +766,7 @@
           <div class="col-lg-4">
             <div class="footer__info">
               <div class="footer__info--logo">
-                <img src="assets/images/footer-logo.png" alt="image">
+                <img src="#" alt="image">
               </div>
               <div class="footer__info--content">
                 <p class="paragraph dark">Zapper is an app that helps you
@@ -801,7 +792,7 @@
                   <li><a href="#">About</a></li>
                   <li><a href="#">Our Team</a></li>
                   <li><a href="#">Features</a></li>
-                  <li><a href="#">Blog</a></li>
+                  <!-- <li><a href="#">Blog</a></li> -->
                   <li><a href="#">How It Works</a></li>
                 </ul>
               </div>
@@ -835,7 +826,7 @@
         </div>
         <div class="row">
           <div class="footer__copy">
-            <h6>&copy; GFXPARTNER</h6>
+            <h6>&copy; FEETWINGS .PVT.LTD</h6>
           </div>
         </div>
       </div>
