--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="./assets/images/favicon.png" type="image/gif" >
 </head>
 
 <body>
@@ -33,7 +34,7 @@
       <div class="header__wrapper">
         <div class="header__logo">
           <a href="index.html">
-            <img src="" alt="logo">
+            <img src="./assets/images/feetwingslogo.png" alt="logo" height="50px">
           </a>
         </div>
         <div class="header__nav">
@@ -64,8 +65,8 @@
       <div class="container">
         <div class="row align-items-lg-center">
           <div class="col-lg-6 order-2 order-lg-1">
-            <h1 class="main-heading color-black">Progress on the fingertips!</h1>
-            <p class="paragraph"><span>Zapper<sup>TM</sup></span> is an app that helps you organize
+            <h1 class="main-heading color-black">Redefining Limits!</h1>
+            <p class="paragraph"><span>Feetwings<sup>TM</sup></span> is an app that helps you organize
               yourself on the daily basis using systematic
               algorithms to achieve success.</p>
             <div class="download-buttons">
